Homepage: fixed beta-login layout issues

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,3 +1,7 @@
-.margin-bottom-60 {
-  margin-bottom: 60px;
+.navigation-bar {
+  margin-bottom: 50px;
+}
+
+.beta-login {
+  margin-top:10px;
 }
